# laser-measure-app

./: .gitignore  README.md  index.html  index_old.html  manifest.json  sw.js  sw_old.js
css/: app.css
js/: app.js  ble.js  protocol.js  storage.js
python/: README.md  pyproject.toml
python/examples/: simple_measure.py
python/laser_measure/: __init__.py  ble.py  cli.py  export.py  protocol.py
