[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "laser-measure"
version = "1.0.0"
description = "Python CLI for Bosch GLM laser distance meters"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Adi", email = "adi@example.com"},
]
keywords = ["laser", "measurement", "bluetooth", "ble", "bosch", "glm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "bleak>=0.20.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
excel = ["openpyxl>=3.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/adi/laser-measure-app"
Documentation = "https://github.com/adi/laser-measure-app/blob/main/README.md"
Repository = "https://github.com/adi/laser-measure-app.git"
"Bug Tracker" = "https://github.com/adi/laser-measure-app/issues"

[project.scripts]
laser-measure = "laser_measure.cli:main"

[tool.hatch.build.targets.sdist]
include = [
    "/laser_measure",
    "/README.md",
    "/examples",
]

[tool.hatch.build.targets.wheel]
packages = ["laser_measure"]

# Development tools configuration

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "bleak.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config", 
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "hardware: marks tests that require hardware (deselect with '-m \"not hardware\"')",
]
asyncio_mode = "auto"